--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header -->
     <header>
-        <img src="assets/images/logo.jpg" alt="">
+        <img src="assets/images/logo.png" alt="">
         <h1>City Wonderer</h1>
         <h3>Hop for the adventurers!</h3>
         <div class="dropdown">
