--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
         <img src="assets/images/logo.png" alt="">
         <h1>City Wonderer</h1>
-        <h3>Hop for the adventurers!</h3>
+        <h3>The hub for the adventurers!</h3>
         <div class="dropdown">
             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown"
                 aria-expanded="false">
