--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body>
     <!-- Header -->
-    <header>
-        <img src="assets/images/logo.png" alt="">
-        <h1>City Wonderer</h1>
-        <h3>Hop for the adventurers!</h3>
+    <header class='d-flex justify-content-around align-items-start'>
+        <img id='logo' src="assets/images/logo.png" alt="">
+        <div id="title">City Wonderer</div>
+        <div id="slogan">Hop for the adventurers!</div>
         <div class="dropdown">
             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown"
                 aria-expanded="false">
