--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>City Wonderer</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -20,11 +25,11 @@
   <!-- Header -->
   <header class="header">
     <img id='logo' src="assets/images/logo.png" alt="">
-    <div id="title">City Wonderer</div>
-    <div id="slogan">The hub for the adventurers!</div>
+    <div class="name"><h1>City Wonderer</h1></div>
+    <div id="slogan">" The hub for adventures "</div>
     <div class="dropdown">
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-        I want to go there!
+        Want to go!
       </button>
       <div class="dropdown-menu">
         <button class="dropdown-item" type="button">London</button>
@@ -34,9 +39,11 @@
   
   <!--Main container for the rest part of page -->
   <main id='container' class="container">
+
+    
     <!--Welcome to City Wonderer -->
     <div class="welcome">
-      <h2 class='h2'>Create a new page in your travel book </h2>
+      <h2 class='h2'> Create a new page in your Travel Book</h2>
     </div>
 
     <!-- search for a city -->
@@ -44,36 +51,15 @@
     <div id="search-area">
       <form id="search-city">
         <!-- input any city here -->
-        <input name="city" type="text" placeholder="Write city of your dream here" id="city" autofocus="true"
+        <input name="city" type="text" placeholder="Write a city" id="city" autofocus="true"
           class="city-input" />
         <!-- the submit button -->
-        <button type="submit" id="search-btn" class="btn btn-primary">Travel now</button>
+        <button type="submit" id="search-btn" class="btn btn-primary">Travel</button>
       </form>
 
-      <!-- section for city news (and our partners) -->
-      <section id="categoryGrid">
-        <div id="city_1" class="categoryGridArea hide">
-          <div class="heading">City 1</div>
-        </div>
-        <div id="city_2" class="categoryGridArea hide">
-          <div class="heading">City 2</div>
-        </div>
-        <div id="city_3" class="categoryGridArea hide">
-          <div class="heading">City 3</div>
-        </div>
-        <div id="city_4" class="categoryGridArea hide">
-          <div class="heading">City 4</div>
-        </div>
-        <div id="city_5" class="categoryGridArea hide">
-          <div class="heading">City 5</div>
-        </div>
-      </section>
+    
     </div>
-    <!-- earth dummy img -->
-    <hr>
-    <img src="assets/images/earth.jpg" alt="" class="earth">
-    <hr>
-
+ 
     <!-- Press button above and get results-->
     <div class="row">
       <div class="col1">
@@ -86,14 +72,34 @@
       <div class="col2">
         <div class="aside"></div>
       </div>
-    </div>
-    <!-- Footer -->
-    <div class="footer">
-      <div class="created">
-        <p>created by Group 4 &copy;2023</p>
-      </div>
-    </div>
+
   </main>
+
+  <!-- section for city news (and our partners) -->
+  <section id="categoryGrid">
+    <div id="London" class="categoryGridArea">
+      <div class="heading">THE 10 BEST London Bridges </div>
+    </div>
+    <div id="Madrid" class="categoryGridArea">
+      <div class="heading">¿Qué ver en Madrid en tres días?</div>
+    </div>
+    <div id="Paris" class="categoryGridArea">
+      <div class="heading">Paris city breaks</div>
+    </div>
+    <div id="Amsterdam" class="categoryGridArea">
+      <div class="heading">Amsterdam, The Netherlands 2023: Best Places to Visit</div>
+    </div>
+    <div id="Berlin" class="categoryGridArea">
+      <div class="heading">Berlin</div>
+    </div>
+  </section>
+
+   <!-- Footer -->
+   <div class="footer">
+    <div class="created">
+      <p>created by Group 4 &copy;2023</p>
+    </div>
+  </div>
 
   <!-- Moment.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
