--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="col1">
         <div id="map"></div>
         <div id="city_info"></div>
-        <div id="five-day" class="row spacebetween"></div>
+        <div id="five-day" class="weathersection mt-3"></div>
       </div>
 
       <!-- Aside -->
