--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header class="header">
     <img id='logo' src="assets/images/logo.png" alt="">
     <div class="name"><h1>City Wonderer</h1></div>
-    <div id="slogan">The hub for adventures</div>
+    <div id="slogan">" The hub for adventures "</div>
     <div class="dropdown">
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
         Want to go!
@@ -54,8 +54,10 @@
         <input name="city" type="text" placeholder="Write a city" id="city" autofocus="true"
           class="city-input" />
         <!-- the submit button -->
-        <button type="submit" id="search-btn" >Travel</button>
-      </form>    
+        <button type="submit" id="search-btn" class="btn btn-primary">Travel</button>
+      </form>
+
+    
     </div>
  
     <!-- Press button above and get results-->
