fixed limit on the call to openmap, added style to POI link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
  
     <!-- Press button above and get results-->
-    <div class="row">
+    <div id = "results-section" class="row d-none">
       <div class="col1">
         <div id="map"></div>
         <div id="city_info"></div>
