wishlist button sorted

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="slogan">The hub for adventurers</div>
     <div class="dropdown">
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-        Want to go!
+        My wishlist
       </button>
       <div class="dropdown-menu">
         <button class="dropdown-item" type="button">London</button>
