--- a/index.html
+++ b/index.html
@@ -61,36 +61,37 @@
       
     <div id='container-2' class="container-2">
     <!-- Press button above and get results-->
-    <div id = "results-section" class="row d-none">
-      <div class="col1">
+    <div id = "results-section" class="col1 d-none">
+    <!-- <div id = "results-section" class="row d-none"> -->
+      <!-- <div class="col1"> -->
+      <!-- <div class="col1 col-9"> -->
         <div id="map"></div>
-        <div id="city_info"></div>
         <div id="five-day" class="weathersection mt-3"></div>
-      </div>
+      <!-- </div> -->
 
       <!-- Aside -->
-      <div class="col2">
+      <!-- <div class="col2"> -->
         <div class="aside"></div>
-      </div>
+      <!-- </div> -->
 </div>
       
   </main>
 
   <!-- section for city news (and our partners) -->
   <section id="categoryGrid">
-    <div id="London" class="categoryGridArea">
+    <div id="City1" class="categoryGridArea">
       <div class="heading">THE 10 BEST London Bridges </div>
     </div>
-    <div id="Madrid" class="categoryGridArea">
+    <div id="City2" class="categoryGridArea">
       <div class="heading">¿Qué ver en Madrid en tres días?</div>
     </div>
-    <div id="Paris" class="categoryGridArea">
+    <div id="City3" class="categoryGridArea">
       <div class="heading">Paris city breaks</div>
     </div>
-    <div id="Amsterdam" class="categoryGridArea">
+    <div id="City4" class="categoryGridArea">
       <div class="heading">Amsterdam, The Netherlands 2023: Best Places to Visit</div>
     </div>
-    <div id="Berlin" class="categoryGridArea">
+    <div id="City5" class="categoryGridArea">
       <div class="heading">Berlin</div>
     </div>
   </section>
