--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
@@ -38,8 +43,11 @@
     <!-- Header -->
     <header class="header">
       <img id="logo" src="assets/images/logo.png" alt="" />
-      <div class="name"><h1>City Wonderer</h1></div>
-      <div id="slogan">The hub for adventurers</div>
+      <div class="name">
+        <h1>Welcome To The City Wonderer.</h1>
+        <div id="slogan">The hub for adventurers.</div>
+      </div>
+
       <div class="dropdown">
         <button
           class="btn btn-primary dropdown-toggle"
@@ -47,7 +55,7 @@
           data-toggle="dropdown"
           aria-expanded="false"
         >
-          My wishlist
+          My Wishlist
         </button>
         <div id="dropdown-menu" class="dropdown-menu">
           <button class="dropdown-item" type="button">London</button>
@@ -59,7 +67,7 @@
     <main id="container" class="container">
       <!--Welcome to City Wonderer -->
       <div class="welcome">
-        <h2 class="h2">Create a new page in your Travel Book</h2>
+        <h2 class="rubberBand">Create a new page in your Travel Book</h2>
       </div>
 
       <!-- search for a city -->
