--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <header class="header">
       <img id="logo" src="assets/images/logo.png" alt="" />
       <div class="name">
-        <h1>Welcome To The City Wonderer.</h1>
-        <div id="slogan">The hub for adventurers.</div>
+        <h1>Welcome To The City Wonderer</h1>
+        <div id="slogan">The hub for adventurers</div>
       </div>
 
       <div class="dropdown">
