--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <img id='logo' src="assets/images/logo.png" alt="">
-    <div class="name"><h1>City Wonderer</h1></div>
+    <a href="index.html">
+      <img id='logo' src="assets/images/logo.png" alt="App Logo">
+    </a>
+    <a href="index.html" style="text-decoration: none;">
+      <div class="name"><h1>City Wonderer</h1></div>
+    </a>
     <div id="slogan">The hub for adventurers</div>
     <div class="dropdown">
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
