--- a/index.html
+++ b/index.html
@@ -42,10 +42,15 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <img id="logo" src="assets/images/logo.png" alt="" />
+      <a href="index.html">
+      <img id='logo' src="assets/images/logo.png" alt="App Logo">
+      </a>
       <div class="name">
-        <h1>Welcome To The City Wonderer</h1>
-        <div id="slogan">The hub for adventurers</div>
+      <a href="index.html" style="text-decoration: none;">
+      <h1>Welcome To The City Wonderer</h1>
+      </a>
+      </div>
+      <div id="slogan">The hub for adventurers</div>
       </div>
 
       <div class="dropdown">
