--- a/index.html
+++ b/index.html
@@ -91,54 +91,43 @@
       </form>
     </div>
 
-    <div id='container-2' class="container-2">
-      <!-- Press button above and get results-->
-      <div id="results-section" class="col1 d-none">
-        <!-- <div id = "results-section" class="row d-none"> -->
-        <!-- <div class="col1"> -->
-        <!-- <div class="col1 col-9"> -->
-        <div id="map"></div>
-        <div id="five-day" class="weathersection mt-3"></div>
-        <!-- </div> -->
-
-        <!-- Aside -->
-        <!-- <div class="col2"> -->
-        <div class="aside"></div>
-        <!-- </div> -->
+      <div id="container-2" class="container-2">
+        <!-- Press button above and get results-->
+        <div id="results-section" class="col1 d-none">
+          <div id="map"></div>
+          <div id="five-day" class="weathersection mt-3"></div>
+          <div class="aside"></div>
+        </div>
       </div>
+    </main>
 
-  </main>
+    <!-- section for city news (and our partners) -->
+    <section id="categoryGrid">
+      <div id="City1" class="categoryGridArea">
+        <div class="heading">THE 10 BEST London Bridges</div>
+      </div>
+      <div id="City2" class="categoryGridArea">
+        <div class="heading">¿Qué ver en Madrid en tres días?</div>
+      </div>
+      <div id="City3" class="categoryGridArea">
+        <div class="heading">Paris city breaks</div>
+      </div>
+      <div id="City4" class="categoryGridArea">
+        <div class="heading">
+          Amsterdam, The Netherlands 2023: Best Places to Visit
+        </div>
+      </div>
+      <div id="City5" class="categoryGridArea">
+        <div class="heading">Berlin</div>
+      </div>
+    </section>
 
-  <!-- section for city news (and our partners) -->
-  <section id="categoryGrid">
-    <div id="City1" class="categoryGridArea">
-      <a class='heading' target="#" href="https://www.thetravel.com/london-bridges-views-city/">THE 10 BEST London
-        Bridges</a>
+    <!-- Footer -->
+    <div class="footer">
+      <div class="created">
+        <p>created by Group 4 &copy;2023</p>
+      </div>
     </div>
-    <div id="City2" class="categoryGridArea">
-      <a class='heading' target="#" href="https://www.organizotuviaje.com/espana/madrid-en-3-dias/">¿Qué ver en Madrid
-        en tres días?</a>
-    </div>
-    <div id="City3" class="categoryGridArea">
-      <a class='heading' target="#"
-        href="https://www.tui.co.uk/destinations/europe/france/paris/holidays-paris.html">Paris City Break</a>
-    </div>
-    <div id="City4" class="categoryGridArea">
-      <a class='heading' target="#"
-        href="https://thetourguy.com/travel-blog/netherlands/amsterdam/top-things-to-do-in-amsterdam-this-year">Amsterdam,
-        The Netherlands 2023: Best Places to Visit</a>
-    </div>
-    <div id="City5" class="categoryGridArea">
-      <a class='heading' target="#" href="https://www.thomascook.com/holidays/city-breaks/berlin">Berlin</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <div class="footer">
-    <div class="created">
-      <p>created by Group 4 &copy;2023</p>
-    </div>
-  </div>
 
   <!-- Moment.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
