--- a/index.html
+++ b/index.html
@@ -1,95 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>City Wonderer</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>City Wonderer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat:wght@400;700&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+      crossorigin=""
+    />
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script
+      src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+      crossorigin=""
+    ></script>
+  </head>
 
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
-  <!-- Make sure you put this AFTER Leaflet's CSS -->
-  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-    integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
-</head>
-
-<body>
-  <!-- Header -->
-  <header class="header">
-    <a href="index.html">
-      <img id='logo' src="assets/images/logo.png" alt="App Logo">
-    </a>
-    <div class="name">
-      <a href="index.html" style="text-decoration: none;">
-        <h1>Welcome To The City Wonderer</h1>
-      </a>
-    </div>
-    <div id="slogan">The hub for adventurers</div>
-    </div>
-
-    <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-        My Wishlist
-      </button>
-      <div id="dropdown-menu" class="dropdown-menu">
-        <button class="dropdown-item" type="button">London</button>
-      </div>
-    </div>
-  </header>
-
-  <!--Main container for the rest part of page -->
-  <main id="container" class="container">
-    <!--Welcome to City Wonderer -->
-    <div class="welcome">
-      <h2 class="rubberBand">Create a new page in your Travel Book</h2>
-    </div>
-
-    <!-- search for a city -->
-
-    <div id="search-area">
-      <form id="search-city">
-        <div id="poi-categories-wrapper" class="dropdown">
-          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-            Categories
-          </button>
-          <div class="dropdown-menu">
-            <button onclick="setPoiCategory('theatres_and_entertainments')" class="dropdown-item" type="button">
-              Theatres and Entertainments
-            </button>
-            <button onclick="setPoiCategory('accomodations')" class="dropdown-item" type="button">
-              Accomodations
-            </button>
-            <button onclick="setPoiCategory('architecture')" class="dropdown-item" type="button">
-              Architecture
-            </button>
-            <button onclick="setPoiCategory('museums')" class="dropdown-item" type="button">
-              Museums
-            </button>
-            <button onclick="setPoiCategory('historic')" class="dropdown-item" type="button">
-              Historic
-            </button>
-            <button onclick="setPoiCategory('tourist_facilities')" class="dropdown-item" type="button">
-              Tourist Facilities
-            </button>
-          </div>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <div class="dropdown">
+        <button
+          class="btn btn-primary dropdown-toggle"
+          type="button"
+          data-toggle="dropdown"
+          aria-expanded="false"
+        >
+          My Wishlist
+        </button>
+        <div id="dropdown-menu" class="dropdown-menu">
+          <button class="dropdown-item" type="button">London</button>
         </div>
-        <!-- input any city here -->
-        <input name="city" type="text" placeholder="Where to?" id="city" autofocus="true" class="city-input" />
-        <!-- the submit button -->
-        <button type="submit" id="search-btn">Travel</button>
-      </form>
-    </div>
+      </div>
+
+      <div class="name">
+        <a href="index.html" style="text-decoration: none">
+          <h1>Welcome To The City Wonderer</h1>
+        </a>
+        <div id="slogan"><h4>The hub for adventurers</h4></div>
+      </div>
+
+      <a href="index.html">
+        <img id="logo" src="assets/images/logo.png" alt="App Logo" />
+      </a>
+    </header>
+
+    <!--Main container for the rest part of page -->
+    <main id="container" class="container">
+      <!--Welcome to City Wonderer -->
+      <div class="welcome">
+        <h5 id="call-to-action" class="rubberBand">
+          Create a new page in your Travel Book
+        </h5>
+      </div>
+
+      <!-- search for a city -->
+
+      <div id="search-area">
+        <form id="search-city">
+          <div id="poi-categories-wrapper" class="dropdown">
+            <button
+              class="btn btn-primary dropdown-toggle"
+              type="button"
+              data-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Categories
+            </button>
+            <div class="dropdown-menu">
+              <button
+                onclick="setPoiCategory('theatres_and_entertainments')"
+                class="dropdown-item"
+                type="button"
+              >
+                Theatres and Entertainments
+              </button>
+              <button
+                onclick="setPoiCategory('accomodations')"
+                class="dropdown-item"
+                type="button"
+              >
+                Accomodations
+              </button>
+              <button
+                onclick="setPoiCategory('architecture')"
+                class="dropdown-item"
+                type="button"
+              >
+                Architecture
+              </button>
+              <button
+                onclick="setPoiCategory('museums')"
+                class="dropdown-item"
+                type="button"
+              >
+                Museums
+              </button>
+              <button
+                onclick="setPoiCategory('historic')"
+                class="dropdown-item"
+                type="button"
+              >
+                Historic
+              </button>
+              <button
+                onclick="setPoiCategory('tourist_facilities')"
+                class="dropdown-item"
+                type="button"
+              >
+                Tourist Facilities
+              </button>
+            </div>
+          </div>
+          <!-- input any city here -->
+          <input
+            name="city"
+            type="text"
+            placeholder="Where to?"
+            id="city"
+            autofocus="true"
+            class="city-input"
+          />
+          <!-- the submit button -->
+          <button type="submit" id="search-btn">Travel</button>
+        </form>
+      </div>
 
       <div id="container-2" class="container-2">
         <!-- Press button above and get results-->
@@ -129,13 +190,14 @@
       </div>
     </div>
 
-  <!-- Moment.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-    crossorigin="anonymous"></script>
-  <script src="assets/js/script.js"></script>
-</body>
-
+    <!-- Moment.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+      crossorigin="anonymous"
+    ></script>
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
