--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <script
       src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
       integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-      crossorigin=""
-    ></script>
+      crossorigin="">
+    </script>
   </head>
 
   <body>
@@ -62,7 +62,9 @@
         <a href="index.html" style="text-decoration: none">
           <h1>Welcome To The City Wonderer</h1>
         </a>
-        <div id="slogan"><h4>The hub for adventurers</h4></div>
+        <div id="slogan">
+          <h4>The hub for adventurers</h4>
+        </div>
       </div>
 
       <a href="index.html">
@@ -141,16 +143,20 @@
           <input
             name="city"
             type="text"
-            placeholder="Where to?"
             id="city"
-            autofocus="true"
             class="city-input"
+            placeholder="Where to?"
+            autofocus
           />
           <!-- the submit button -->
-          <button type="submit" id="search-btn">Travel</button>
+          <button 
+          type="submit" 
+          id="search-btn">
+          Travel
+          </button>
         </form>
       </div>
-
+      <!-- The section where the api information recieved through js will be populated -->
       <div id="container-2" class="container-2">
         <!-- Press button above and get results-->
         <div id="results-section" class="col1 d-none">
@@ -190,13 +196,19 @@
     </div>
 
     <!-- Moment.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script 
+    src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js" >
+    </script>
+    <script 
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" >
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"
-    ></script>
-    <script src="assets/js/script.js"></script>
+      crossorigin="anonymous" >
+    </script>
+    <script 
+    src="assets/js/script.js" >
+    </script>
   </body>
 </html>
