added links to home page

--- a/index.html
+++ b/index.html
@@ -170,21 +170,24 @@
     <!-- section for city news (and our partners) -->
     <section id="categoryGrid">
       <div id="City1" class="categoryGridArea">
-        <div class="heading">THE 10 BEST London Bridges</div>
+        <a class='heading' target="#" href="https://www.thetravel.com/london-bridges-views-city/">THE 10 BEST London
+          Bridges</a>
       </div>
       <div id="City2" class="categoryGridArea">
-        <div class="heading">¿Qué ver en Madrid en tres días?</div>
+        <a class='heading' target="#" href="https://www.organizotuviaje.com/espana/madrid-en-3-dias/">¿Qué ver en Madrid
+          en tres días?</a>
       </div>
       <div id="City3" class="categoryGridArea">
-        <div class="heading">Paris city breaks</div>
+        <a class='heading' target="#"
+        href="https://www.tui.co.uk/destinations/europe/france/paris/holidays-paris.html">Paris City Break</a>
       </div>
       <div id="City4" class="categoryGridArea">
-        <div class="heading">
-          Amsterdam, The Netherlands 2023: Best Places to Visit
-        </div>
+        <a class='heading' target="#"
+        href="https://thetourguy.com/travel-blog/netherlands/amsterdam/top-things-to-do-in-amsterdam-this-year">Amsterdam,
+        The Netherlands 2023: Best Places to Visit</a>
       </div>
       <div id="City5" class="categoryGridArea">
-        <div class="heading">Berlin</div>
+        <a class='heading' target="#" href="https://www.thomascook.com/holidays/city-breaks/berlin">Berlin</a>
       </div>
     </section>
 
