footer made semantic

--- a/index.html
+++ b/index.html
@@ -189,11 +189,10 @@
     </section>
 
     <!-- Footer -->
-    <div class="footer">
-      <div class="created">
-        <p>created by Group 4 &copy;2023</p>
-      </div>
-    </div>
+    <footer>
+      <p>created by Group 4 &copy;2023</p>
+    </footer>    
+      
 
     <!-- Moment.js -->
     <script 
