--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
 
       <a href="index.html">
-        <img id="logo" src="assets/images/logo.png" alt="App Logo" />
+        <img id="logo" src="assets/images/logo.png" alt="App Logo" >
       </a>
     </header>
 
@@ -147,7 +147,7 @@
             class="city-input"
             placeholder="Where to?"
             autofocus
-          />
+          >
           <!-- the submit button -->
           <button 
           type="submit" 
@@ -168,7 +168,7 @@
     </main>
 
     <!-- section for city news (and our partners) -->
-    <section id="categoryGrid">
+    <div id="categoryGrid">
       <div id="City1" class="categoryGridArea">
         <div class="heading">THE 10 BEST London Bridges</div>
       </div>
@@ -186,7 +186,7 @@
       <div id="City5" class="categoryGridArea">
         <div class="heading">Berlin</div>
       </div>
-    </section>
+    </div>
 
     <!-- Footer -->
     <footer>
