--- a/index.html
+++ b/index.html
@@ -1,83 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>City Wonderer</title>
-    <link 
-      rel="preconnect" 
-      href="https://fonts.googleapis.com" >
-    <link 
-      rel="preconnect" 
-      href="https://fonts.gstatic.com" crossorigin >
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet" >
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap"
-      rel="stylesheet" >
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
-      rel="stylesheet" >
-    <link 
-      rel="stylesheet" 
-      href="assets/css/style.css" >
-    <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous" >
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
       integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-      crossorigin="" >
-    <link rel="alternate icon" class="js-site-favicon" type="image/png" href="https://github.githubassets.com/favicons/favicon.png">
-    <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="https://github.githubassets.com/favicons/favicon.svg">
+      crossorigin=""
+    />
+    <link
+      rel="alternate icon"
+      class="js-site-favicon"
+      type="image/png"
+      href="https://github.githubassets.com/favicons/favicon.png"
+    />
+    <link
+      rel="icon"
+      class="js-site-favicon"
+      type="image/svg+xml"
+      href="https://github.githubassets.com/favicons/favicon.svg"
+    />
 
     <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script
       src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
       integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-      crossorigin="">
-    </script>
+      crossorigin=""
+    ></script>
   </head>
 
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="dropdown">
-        <button
-          class="btn btn-primary dropdown-toggle"
-          type="button"
-          data-toggle="dropdown"
-          aria-expanded="false"
-        >
-          My Wishlist
-        </button>
-        <div id="dropdown-menu" class="dropdown-menu">
-          <button class="dropdown-item" type="button">London</button>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="navbar-color container-fluid">
+          <img class="logo" src="./assets/images/logo.png" />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Articles</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Cities</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">&#x2758;</a>
+              </li>
+              <li class="btn-group">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  &#x2764; My Wishlist
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">List is empty</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-
-      <div class="name">
-        <a href="index.html" style="text-decoration: none">
-          <h1>Welcome To The City Wonderer</h1>
-        </a>
-        <div id="slogan">
-          <h4>The hub for adventurers</h4>
-        </div>
-      </div>
-
-      <a href="index.html">
-        <img id="logo" src="assets/images/logo.png" alt="App Logo" >
-      </a>
+      </nav>
+      <!-- *********** -->
     </header>
 
     <!--Main container for the rest part of page -->
-    <main id="container" class="container">
+
+    <section id="hero" class="hero column">
+      <div class="blurred-background"></div>
       <!--Welcome to City Wonderer -->
+
+      <div class="site-info-container">
+        <div class="welcome">
+          <h1>Welcome To The City Wonderer</h1>
+          <h1>The Hub For Adventures and Exploration!</h1>
+        </div>
+
+        <article class="description">
+          Discover new destinations and plan adventures with City Wonderer.
+          Browse attractions, landmarks, and hidden gems, create a wish-list.
+          Never run out of places to explore, start exploring now and be
+          inspired!
+        </article>
+      </div>
+
       <div class="welcome">
         <h5 id="call-to-action" class="rubberBand">
           Create a new page in your Travel Book
@@ -150,13 +204,9 @@
             class="city-input"
             placeholder="Where to?"
             autofocus
-          >
+          />
           <!-- the submit button -->
-          <button 
-          type="submit" 
-          id="search-btn">
-          Travel
-          </button>
+          <button type="submit" id="search-btn">Travel</button>
         </form>
       </div>
       <!-- The section where the api information recieved through js will be populated -->
@@ -168,52 +218,71 @@
           <div class="aside"></div>
         </div>
       </div>
-    </main>
+    </section>
 
     <!-- section for city news (and our partners) -->
     <div id="categoryGrid">
       <div id="City1" class="categoryGridArea">
-        <a class='heading' target="#" href="https://www.thetravel.com/london-bridges-views-city/">THE 10 BEST London
-          Bridges</a>
+        <a
+          class="heading"
+          target="#"
+          href="https://www.thetravel.com/london-bridges-views-city/"
+          >THE 10 BEST London Bridges</a
+        >
       </div>
       <div id="City2" class="categoryGridArea">
-        <a class='heading' target="#" href="https://www.organizotuviaje.com/espana/madrid-en-3-dias/">¿Qué ver en Madrid
-          en tres días?</a>
+        <a
+          class="heading"
+          target="#"
+          href="https://www.organizotuviaje.com/espana/madrid-en-3-dias/"
+          >¿Qué ver en Madrid en tres días?</a
+        >
       </div>
       <div id="City3" class="categoryGridArea">
-        <a class='heading' target="#"
-        href="https://www.tui.co.uk/destinations/europe/france/paris/holidays-paris.html">Paris City Break</a>
+        <a
+          class="heading"
+          target="#"
+          href="https://www.tui.co.uk/destinations/europe/france/paris/holidays-paris.html"
+          >Paris City Break</a
+        >
       </div>
       <div id="City4" class="categoryGridArea">
-        <a class='heading' target="#"
-        href="https://thetourguy.com/travel-blog/netherlands/amsterdam/top-things-to-do-in-amsterdam-this-year">Amsterdam,
-        The Netherlands 2023: Best Places to Visit</a>
+        <a
+          class="heading"
+          target="#"
+          href="https://thetourguy.com/travel-blog/netherlands/amsterdam/top-things-to-do-in-amsterdam-this-year"
+          >Amsterdam, The Netherlands 2023: Best Places to Visit</a
+        >
       </div>
       <div id="City5" class="categoryGridArea">
-        <a class='heading' target="#" href="https://www.thomascook.com/holidays/city-breaks/berlin">Berlin</a>
+        <a
+          class="heading"
+          target="#"
+          href="https://www.thomascook.com/holidays/city-breaks/berlin"
+          >Berlin</a
+        >
       </div>
     </div>
 
     <!-- Footer -->
     <footer>
       <p>created by Group 4 &copy;2023</p>
-    </footer>    
-      
+    </footer>
 
     <!-- Moment.js -->
-    <script 
-    src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js" >
-    </script>
-    <script 
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" >
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous" >
-    </script>
-    <script 
-    src="assets/js/script.js" >
-    </script>
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
