search bar stylng

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
             autofocus
           />
           <!-- the submit button -->
-          <button type="submit" id="search-btn" class="search-btn">
-            Travel
+          <button type="submit" id="search-btn" class="search-btn row">
+            <img src="./assets/images/search-7525.svg" class="magnifying-glass-icon"/>
           </button>
         </form>
       </div>
