--- a/index.html
+++ b/index.html
@@ -194,7 +194,6 @@
               >
                 Historic
               </button>
-              
             </div>
           </div>
           <!-- input any city here -->
@@ -324,16 +323,18 @@
     <div
       class="modal fade"
       id="resultsMap"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
       tabindex="-1"
-      aria-labelledby="exampleModalLabel"
+      aria-labelledby="staticBackdropLabel"
       aria-hidden="true"
     >
-      <div
-        class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl"
-      >
+      <div class="modal-dialog modal-xl">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">
+              Modal title
+            </h1>
             <button
               type="button"
               class="btn-close"
