poi image preview

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h1 class="modal-title fs-5" id="staticBackdropLabel">
-              Modal title
+              Discover With City Wonderer!
             </h1>
             <button
               type="button"
@@ -346,7 +346,7 @@
             <!-- The section where the api information recieved through js will be populated -->
             <div id="container-2" class="container-2">
               <!-- Press button above and get results-->
-              <div id="results-section" class="col1 d-none">
+              <div id="results-section" class="col1">
                 <div id="map"></div>
                 <div id="five-day" class="weathersection mt-3"></div>
                 <div class="aside"></div>
