make results and map responsive

--- a/index.html
+++ b/index.html
@@ -346,12 +346,10 @@
           </div>
           <div class="modal-body">
             <!-- The section where the api information recieved through js will be populated -->
-
-            <!-- Press button above and get results-->
-            <div id="results-section" class="col1">
-              <div class="aside"></div>
+            <div id="results-section" class="results-section">
               <div id="map"></div>
-              <div id="five-day" class="weathersection mt-3"></div>
+              <div id="five-day" class="weathersection"></div>
+              <div class="aside"></div>
             </div>
           </div>
           <div class="modal-footer">
