add responsive map and results, stop wishlist overflowing

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle"
+                  class="nav-link dropdown-toggle "
                   href="#"
                   role="button"
                   data-bs-toggle="dropdown"
@@ -100,7 +100,7 @@
                 >
                   &#x2764; My Wishlist
                 </a>
-                <ul class="dropdown-menu">
+                <ul id="dropdown-menu" class="dropdown-menu dropdown-menu-end">
                   <li><a class="dropdown-item" href="#">Empty List</a></li>
                 </ul>
               </li>
