--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cities</a>
+                <a class="nav-link" href="#top-cities">Cities</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
