add pictures alt attributes, fix some images relative path

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="navbar-color container-fluid">
-          <img class="logo" src="./assets/images/logo.png" />
+          <img
+            class="logo"
+            src="./assets/images/logo.png"
+            alt="city-wondered-logo"
+          />
           <button
             class="navbar-toggler"
             type="button"
@@ -92,7 +96,7 @@
 
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle "
+                  class="nav-link dropdown-toggle"
                   href="#"
                   role="button"
                   data-bs-toggle="dropdown"
@@ -138,7 +142,11 @@
           <h2>Find your next adventure - search with City Wonderer now!</h2>
         </div>
         <form id="search-city" class="search-wrapper">
-          <img class="half-circle" src="./assets/images/half-l.png" />
+          <img
+            class="half-circle"
+            src="./assets/images/half-l.png"
+            alt="black-half-circle"
+          />
           <div id="poi-categories-wrapper" class="dropdown categories-dropdown">
             <button
               id="select-category"
@@ -151,6 +159,7 @@
               <img
                 class="dropdown-arrow"
                 src="./assets/images/arrow-down-3101.svg"
+                alt="arrow-down"
               />
             </button>
             <div class="dropdown-menu">
@@ -218,9 +227,14 @@
             <img
               src="./assets/images/search-7525.svg"
               class="magnifying-glass-icon"
+              alt="magnifying-glass"
             />
           </button>
-          <img class="half-circle" src="./assets/images/half-r.png" />
+          <img
+            class="half-circle"
+            src="./assets/images/half-r.png"
+            alt="black half circle"
+          />
         </form>
       </div>
     </section>
@@ -234,11 +248,14 @@
             <img
               src="./assets/images/tower-bridge-6273431_1920.jpg"
               class="card-img-top"
-              alt="..."
+              alt="london tower bridge"
             />
             <div class="card-body">
               <h5 class="card-title">London</h5>
-              <img src="/assets/images/right-arrow.svg" />
+              <img
+                src="/assets/images/right-arrow.svg"
+                alt="arrow pointing right"
+              />
             </div>
           </div>
         </div>
@@ -247,24 +264,30 @@
             <img
               src="./assets/images/madrid.jpg"
               class="card-img-top"
-              alt="..."
+              alt="photo of builings from above"
             />
             <div class="card-body">
               <h5 class="card-title">Madrid</h5>
-              <img src="/assets/images/right-arrow.svg" />
+              <img
+                src="/assets/images/right-arrow.svg"
+                alt="arrow pointing right"
+              />
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
             <img
-              src="/assets/images/amsterdam.jpg"
+              src="./assets/images/amsterdam.jpg"
               class="card-img-top"
-              alt="..."
+              alt="canal and houses"
             />
             <div class="card-body">
               <h5 class="card-title">Amsterdam</h5>
-              <img src="/assets/images/right-arrow.svg" />
+              <img
+                src="./assets/images/right-arrow.svg"
+                alt="arrow pointing right"
+              />
             </div>
           </div>
         </div>
@@ -279,11 +302,14 @@
             <img
               src="./assets/images/day-of-the-dead.jpg"
               class="card-img-top"
-              alt="..."
+              alt="face painted like skull, colorful background"
             />
             <div class="card-body">
               <h5 class="card-title">Day Of The Dead</h5>
-              <img src="/assets/images/right-arrow.svg" />
+              <img
+                src="/assets/images/right-arrow.svg"
+                alt="arrow pointing right"
+              />
             </div>
           </div>
         </div>
@@ -292,24 +318,30 @@
             <img
               src="./assets/images/oktoberfest.jpg"
               class="card-img-top"
-              alt="..."
+              alt="big hall full of people drinking beer"
             />
             <div class="card-body">
               <h5 class="card-title">Oktoberfest</h5>
-              <img src="/assets/images/right-arrow.svg" />
+              <img
+                src="/assets/images/right-arrow.svg"
+                alt="arrrow pointing right"
+              />
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
             <img
-              src="/assets/images/venice-carnival.jpg"
+              src="./assets/images/venice-carnival.jpg"
               class="card-img-top"
-              alt="..."
+              alt="masks painted vibrant colors "
             />
             <div class="card-body">
               <h5 class="card-title">Venice Canival</h5>
-              <img src="/assets/images/right-arrow.svg" />
+              <img
+                src="./assets/images/right-arrow.svg"
+                alt="arrow pointing right"
+              />
             </div>
           </div>
         </div>
