relative path svg fix

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="card-body">
               <h5 class="card-title">London</h5>
               <img
-                src="/assets/images/right-arrow.svg"
+                src="./assets/images/right-arrow.svg"
                 alt="arrow pointing right"
               />
             </div>
@@ -269,7 +269,7 @@
             <div class="card-body">
               <h5 class="card-title">Madrid</h5>
               <img
-                src="/assets/images/right-arrow.svg"
+                src="./assets/images/right-arrow.svg"
                 alt="arrow pointing right"
               />
             </div>
@@ -307,7 +307,7 @@
             <div class="card-body">
               <h5 class="card-title">Day Of The Dead</h5>
               <img
-                src="/assets/images/right-arrow.svg"
+                src="./assets/images/right-arrow.svg"
                 alt="arrow pointing right"
               />
             </div>
@@ -323,7 +323,7 @@
             <div class="card-body">
               <h5 class="card-title">Oktoberfest</h5>
               <img
-                src="/assets/images/right-arrow.svg"
+                src="./assets/images/right-arrow.svg"
                 alt="arrrow pointing right"
               />
             </div>
